-Got basic spark hello world working. -Had to downgrade spark/scala versions and use the particular versions 	as per - http://josedeveloper.com/2020/03/23/spark-scala-con-maven-en-intellij/ 	if not it would not run (Scala Serializable Class not found 	exception.

--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <encoding>UTF-8</encoding>
-    <scala.version>2.13.4</scala.version>
-    <scala.compat.version>2.13</scala.compat.version>
-    <scala.compat.version>2.13</scala.compat.version>
-    <spec2.version>4.10.5</spec2.version>
+    <scala.version>2.12.6</scala.version>
+    <scala.compat.version>2.12</scala.compat.version>
+    <spec2.version>4.2.0</spec2.version>
+    <spark.version>2.4.5</spark.version>
   </properties>
 
   <dependencies>
@@ -22,7 +22,20 @@
       <artifactId>scala-library</artifactId>
       <version>${scala.version}</version>
     </dependency>
+    <!-- Spark -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_${scala.compat.version}</artifactId>
+      <version>${spark.version}</version>
+      <scope>provided</scope>
+    </dependency>
 
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_${scala.compat.version}</artifactId>
+      <version>${spark.version}</version>
+      <scope>provided</scope>
+    </dependency>
     <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
